# spcpp

./: .gitignore  CMakeLists.txt  cg.py  cg_dense.cpp  cg_dense.hpp  cg_dense_test.cpp  cg_sparse.cpp  cg_sparse.hpp  cg_sparse_test.cpp  compile_commands.json  def.hpp  eigen_test.cpp  eigen_test.py  gmres_hh.py  gmres_householder_dense.cpp  gmres_householder_dense.hpp  gmres_mgs.py  gmres_mgs_sparse.cpp  gmres_mgs_sparse.hpp  gmres_scipy.py  gmres_sparse_test  gmres_sparse_test.cpp  gmres_test.cpp  lis_test_cg.cpp  lis_test_cg_sparse.cpp  lis_test_gmres.cpp  spplot.py  test.py  utils.hpp
example_matrices/: example.mtx
